--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -55,7 +55,7 @@ nav {
     margin-top: 20rem;
     margin-bottom: 50rem;
     display: grid;
-    grid-template-columns: 1fr minmax(290px, 350px) 92px minmax(290px, 350px) 1fr;
+    grid-template-columns: 1fr minmax(290px, 400px) 92px minmax(290px, 400px) 1fr;
     grid-gap: 3rem;
 
     h4 {
@@ -74,7 +74,8 @@ nav {
 }
 
 .work {
-  overflow: hidden;
+  // overflow: hidden;
+  margin-bottom: 10rem;
   position: relative;
   display: grid;
   grid-template-columns: 1fr minmax(300px, 900px) 1fr;
@@ -93,7 +94,7 @@ nav {
   }
 
   .card {
-    margin-bottom: 5rem;
+    margin-bottom: 8rem;
 
     &__link {
       display: grid;
