--- a/src/sass/_work.scss
+++ b/src/sass/_work.scss
@@ -16,9 +16,11 @@
 
   &__shapes {
     position: absolute;
-    width: 100vw;
-    height: 200%;
     z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     overflow-x: hidden;
 
     .sphere {
@@ -60,14 +62,15 @@
   .card {
     height: 35rem;
     background-image: linear-gradient(
-      left bottom,
+      left top,
       hsla(229, 12%, 48%, 1) 10%,
       hsla(229, 12%, 36%, 1) 100%
     );
     border-radius: 1.5rem;
     box-shadow: $medium-shadow;
     overflow: hidden;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    text-transform: lowercase;
 
     &:hover {
       transform: translateY(-0.5rem) scale(1.01);
@@ -115,7 +118,7 @@
         width: 380px;
         border-radius: 50%;
         background-color: hsla(242, 89%, 72%, 0);
-        background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23bbc0ce' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23c7ceff' fill-opacity='.7'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
       }
     }
   }
@@ -127,8 +130,10 @@
       &__img {
         width: 35rem;
         &::after {
-          top: 0rem;
-          left: -1.5rem;
+          height: 420px;
+          width: 420px;
+          top: 1rem;
+          left: -3.5rem;
         }
       }
     }
@@ -145,7 +150,8 @@
         width: 29rem;
         align-self: center;
         &::after {
-          left: -4rem;
+          top: 5rem;
+          left: -6.5rem;
         }
       }
     }
