--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -81,7 +81,7 @@ nav {
   position: relative;
   display: grid;
   grid-template-columns: 1fr minmax(300px, 900px) 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto 1300px;
   grid-gap: 1rem 5rem;
 
   .divider,
