--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -132,14 +132,15 @@ nav {
 
 .footer {
   display: grid;
-  grid-template-columns: 1fr minmax(330px, 500px) 500px 1fr;
-  grid-template-rows: 0px 1fr 200px;
+  grid-template-columns: 1fr 330px 1fr minmax(300px, 500px) 1fr;
+  grid-template-rows: 1fr minmax(20px, 200px);
   grid-gap: 5rem;
   padding: 2rem;
+  padding-top: 10rem;
 
   .quote {
     grid-column: 2;
-    grid-row: 2;
+    grid-row: 1;
 
     display: grid;
     grid-template-rows: repeat(4, min-content);
@@ -148,14 +149,32 @@ nav {
   }
 
   .closing {
-    grid-column: 3;
-    grid-row: 2;
+    grid-column: 4;
+    grid-row: 1;
+
+    display: grid;
+    grid-template-rows: repeat(2, min-content);
+    grid-row-gap: 5rem;
+  }
+
+  .cta {
+    display: grid;
+    grid-template-rows: repeat(3, min-content);
+    grid-row-gap: 1rem;
+
+    p:last-of-type {
+      margin-bottom: 2.5rem;
+    }
+
+    a {
+      justify-self: center;
+    }
   }
 
   &__terms {
     grid-area: terms;
     grid-column: 1/-1;
-    grid-row: 3;
+    grid-row: 2;
     justify-self: center;
     align-self: flex-end;
   }
@@ -262,6 +281,25 @@ nav {
       margin-top: 5rem;
     }
   }
+
+  .footer {
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+
+    .quote {
+      grid-column: 1;
+      grid-row: 1;
+
+      h3 {
+        margin-bottom: 3rem;
+      }
+    }
+
+    .closing {
+      grid-column: 1;
+      grid-row: 2;
+    }
+  }
 }
 
 @media only screen and (max-width: $ds-small) {
@@ -285,5 +323,22 @@ nav {
 
   .work {
     margin-top: -12rem;
+  }
+
+  .footer {
+    .social {
+      &__wrapper {
+        grid-template-columns: 1fr;
+        justify-items: flex-start;
+        grid-template-rows: repeat(5, 80px);
+
+        li {
+          &::after {
+            content: "Text";
+            position: absolute;
+          }
+        }
+      }
+    }
   }
 }
