--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -21,6 +21,7 @@
 
   &__link {
     color: $base-color-accent;
+    font-weight: 700;
 
     &:after {
       transform: scaleX(1);
@@ -44,5 +45,11 @@
       padding-top: 0;
       margin-top: 0;
     }
+  }
+}
+
+@media only screen and (max-width: $ds-small) {
+  .about p:last-of-type {
+    max-width: 20ch;
   }
 }
