--- a/src/sass/_info.scss
+++ b/src/sass/_info.scss
@@ -12,7 +12,7 @@
   &__bgImg {
     width: 70vw;
     max-width: 820px;
-    min-width: 580px;
+    min-width: 550px;
   }
 
   &__profilePic {
@@ -94,10 +94,22 @@
       display: grid;
       grid-template-columns: 1fr minmax(48ch, 90ch) 1fr;
       grid-template-rows: min-content 1fr;
-      grid-column-gap: 5rem;
+      grid-column-gap: 3rem;
+
+      .picture {
+        max-width: 36rem;
+      }
 
       .info__text {
         grid-column: 2;
+
+        .love {
+          grid-column: span 2;
+        }
+
+        .code {
+          grid-column: span 2;
+        }
       }
     }
   }
