--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Montserrat:400,500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,600,700,900&display=swap");
 @import "variables";
 @import "base";
 @import "typography";
