--- a/src/sass/_info.scss
+++ b/src/sass/_info.scss
@@ -129,6 +129,14 @@
           grid-row: -1;
           justify-self: flex-start;
         }
+
+        a[href] {
+          grid-column: 1;
+          grid-row: 4;
+          justify-self: unset;
+          width: fit-content;
+          margin: 10px 0px;
+        }
       }
     }
   }
